--- a/CCG/pom.xml
+++ b/CCG/pom.xml
@@ -31,5 +31,17 @@
   		<artifactId>guava</artifactId>
   		<version>19.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.testfx</groupId>
+  		<artifactId>testfx-core</artifactId>
+  		<version>4.0.1-alpha</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.testfx</groupId>
+  		<artifactId>testfx-junit</artifactId>
+  		<version>4.0.1-alpha</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
