--- a/CCG/pom.xml
+++ b/CCG/pom.xml
@@ -43,5 +43,10 @@
   		<version>4.0.1-alpha</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.controlsfx</groupId>
+  		<artifactId>controlsfx</artifactId>
+  		<version>8.40.10</version>
+  	</dependency>
   </dependencies>
 </project>
